--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="/images/seat-logo.png">
 </head>
-<body>
+
+<body id="body-index">
 <div id="wrapper">
     <!-- Header/Banner Section -->
     <ul id="topnav">
-        <li><a class="active">ABOUT SEAT</a></li>
+        <li><a class="active" style="border-top-left-radius: 8px;">ABOUT SEAT</a></li>
         <li><a href="about-arones.html">Arones</a></li>
         <li><a href="about-cerina.html">Cerina</a></li>
         <li><a href="about-resquites.html">Resquites</a></li>
-        <li><a href="about-serafico.html">Serafico</a></li>
-        <li><a href="trial1.html">Squid Man</a></li>
+        <li><a href="about-serafico.html" style="border-top-right-radius: 8px;">Serafico</a></li>
+        <li><a id="squidman" href="trial1.html" style="background-color: #037a76; color:white;">Squid Man 🦑</a></li>
     </ul>
     
     <div id="banner">
@@ -103,7 +104,7 @@
 
     <!-- Footer Section -->
     <div id="footer">
-        <p>&copy; 2024 Team SEAT. All rights reserved.</p>
+        <p>&copy; 2025 Project SEAT. All rights reserved.</p>
     </div>
 </div>
 </body>
